--- a/src/Churchee.Common/Churchee.Common.csproj
+++ b/src/Churchee.Common/Churchee.Common.csproj
@@ -5,17 +5,17 @@
   <ItemGroup>
     <PackageReference Include="Ardalis.Specification" Version="8.0.0" />
     <PackageReference Include="BlazorMonaco" Version="3.2.0" />
-    <PackageReference Include="Bogus" Version="35.5.1" />
+    <PackageReference Include="Bogus" Version="35.6.0" />
     <PackageReference Include="FluentValidation" Version="11.9.2" />
     <PackageReference Include="Hangfire.Core" Version="1.8.14" />
     <PackageReference Include="MediatR" Version="12.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.DataAnnotations.Validation" Version="3.2.0-rc1.20223.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="Radzen.Blazor" Version="4.32.8" />
+    <PackageReference Include="Radzen.Blazor" Version="5.0.1" />
     <PackageReference Include="Roslynator.Analyzers" Version="4.12.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -26,8 +26,11 @@
 	</PackageReference>
     <PackageReference Include="Scrutor" Version="4.2.2" />
     <PackageReference Include="SecurityCodeScan.VS2019" Version="5.6.7" />
-    <PackageReference Include="SonarAnalyzer.CSharp" Version="9.27.0.93347" />
-    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.4.1" />
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="9.30.0.95878">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.4.3" />
     <PackageReference Include="System.Text.Json" Version="8.0.4" />
   </ItemGroup>
 </Project>
