--- a/.editorconfig
+++ b/.editorconfig
@@ -230,6 +230,7 @@ dotnet_naming_style.begins_with_i.required_suffix =
 dotnet_naming_style.begins_with_i.word_separator = 
 dotnet_naming_style.begins_with_i.capitalization = pascal_case
 dotnet_diagnostic.S2589.severity = error
+dotnet_diagnostic.S6605.severity = none
 [*.{cs,vb}]
 dotnet_style_coalesce_expression = true:suggestion
 dotnet_style_null_propagation = true:suggestion
