Media Item Upload File Validation

--- a/src/Churchee.Module.Site/Churchee.Module.Site.csproj
+++ b/src/Churchee.Module.Site/Churchee.Module.Site.csproj
@@ -46,6 +46,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Churchee.Common\Churchee.Common.csproj" />
+    <ProjectReference Include="..\Churchee.ImageProcessing\Churchee.ImageProcessing.csproj" />
     <ProjectReference Include="..\Churchee.Module.Tenancy\Churchee.Module.Tenancy.csproj" />
     <ProjectReference Include="..\Churchee.Module.UI\Churchee.Module.UI.csproj" />
   </ItemGroup>
