--- a/src/Churchee.Blobstorage.Providers/Churchee.Blobstorage.Providers.csproj
+++ b/src/Churchee.Blobstorage.Providers/Churchee.Blobstorage.Providers.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Churchee.Common\Churchee.Common.csproj" />
+    <ProjectReference Include="..\Churchee.ImageProcessing\Churchee.ImageProcessing.csproj" />
   </ItemGroup>
 
 </Project>
