--- a/test/Churchee.Module.Events.Tests/Churchee.Module.Events.Tests.csproj
+++ b/test/Churchee.Module.Events.Tests/Churchee.Module.Events.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -8,14 +8,6 @@
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Compile Remove="Areas\Website\Pages\Events\CreateRazorTests.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="Areas\Website\Pages\Events\CreateRazorTests.cs" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="35.6.1" />
@@ -34,6 +26,7 @@
 
   <ItemGroup>
     <Using Include="Xunit" />
+    <Using Include="Churchee.Module.Events" />
   </ItemGroup>
 
 </Project>
