More Work on Events

--- a/src/Churchee.Module.Events/Churchee.Module.Events.csproj
+++ b/src/Churchee.Module.Events/Churchee.Module.Events.csproj
@@ -5,6 +5,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <InternalsVisibleTo Include="Churchee.Module.Events.Tests" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
