--- a/src/Churchee.Module.Podcasts/Churchee.Module.Podcasts.csproj
+++ b/src/Churchee.Module.Podcasts/Churchee.Module.Podcasts.csproj
@@ -7,6 +7,11 @@
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
   </PropertyGroup>
 
+
+  <ItemGroup>
+    <InternalsVisibleTo Include="Churchee.Module.Podcasts.Tests" />
+  </ItemGroup>
+  
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
