--- a/test/Churchee.Module.Dashboard.Tests/Churchee.Module.Dashboard.Tests.csproj
+++ b/test/Churchee.Module.Dashboard.Tests/Churchee.Module.Dashboard.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Churchee.Module.Podcasts\Churchee.Module.Podcasts.csproj" />
+    <ProjectReference Include="..\..\src\Churchee.Module.Dashboard\Churchee.Module.Dashboard.csproj" />
   </ItemGroup>
 
   <ItemGroup>
