--- a/src/Churchee.Module.Dashboard/Churchee.Module.Dashboard.csproj
+++ b/src/Churchee.Module.Dashboard/Churchee.Module.Dashboard.csproj
@@ -19,8 +19,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\..\churchee\src\Churchee.Common\Churchee.Common.csproj" />
-	  <ProjectReference Include="..\..\..\churchee\src\Churchee.Module.Tenancy\Churchee.Module.Tenancy.csproj" />
+	  <ProjectReference Include="..\Churchee.Common\Churchee.Common.csproj" />
+	  <ProjectReference Include="..\Churchee.Module.Tenancy\Churchee.Module.Tenancy.csproj" />
 	</ItemGroup>
 
 </Project>
