--- a/src/Churchee.Presentation.Admin/appsettings.json
+++ b/src/Churchee.Presentation.Admin/appsettings.json
@@ -19,5 +19,8 @@
     "userName": "set in serets",
     "password": "set in serets",
     "port": "set in serets"
+  },
+  "Facebook": {
+    "Api": "https://graph.facebook.com/v18.0/"
   }
 }
