Project tidy/merge

--- a/src/Churchee.Module.Tokens/Churchee.Module.Tokens.csproj
+++ b/src/Churchee.Module.Tokens/Churchee.Module.Tokens.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <InternalsVisibleTo Include="Churchee.Module.Tokens.Tests" />
+  </ItemGroup>  
+  
+  <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
