Added unit tests for Spotify Integration

--- a/src/Churchee.Module.Podcasts.Spotify/Churchee.Module.Podcasts.Spotify.csproj
+++ b/src/Churchee.Module.Podcasts.Spotify/Churchee.Module.Podcasts.Spotify.csproj
@@ -7,7 +7,11 @@
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
   </PropertyGroup>
 
-  <ItemGroup>
+	<ItemGroup>
+		<InternalsVisibleTo Include="Churchee.Module.Podcasts.Spotify.Tests" />
+	</ItemGroup>
+
+	<ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
