--- a/test/Churchee.Module.Podcasts.Spotify.Tests/Churchee.Module.Podcasts.Spotify.Tests.csproj
+++ b/test/Churchee.Module.Podcasts.Spotify.Tests/Churchee.Module.Podcasts.Spotify.Tests.csproj
@@ -34,4 +34,10 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Samples\TestSpotifyData.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
