--- a/test/Churchee.Module.Facebook.Events.Tests/Churchee.Module.Facebook.Events.Tests.csproj
+++ b/test/Churchee.Module.Facebook.Events.Tests/Churchee.Module.Facebook.Events.Tests.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Churchee.Module.Facebook.Events\Churchee.Module.Facebook.Events.csproj" />
+    <ProjectReference Include="..\Churchee.Test.Helpers\Churchee.Test.Helpers.csproj" />
   </ItemGroup>
 
   <ItemGroup>
