--- a/test/Churchee.EmailConfiguration.MailGun.Tests/Churchee.EmailConfiguration.MailGun.Tests.csproj
+++ b/test/Churchee.EmailConfiguration.MailGun.Tests/Churchee.EmailConfiguration.MailGun.Tests.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Churchee.EmailConfiguration.MailGun\Churchee.EmailConfiguration.MailGun.csproj" />
+    <ProjectReference Include="..\Churchee.Test.Helpers\Churchee.Test.Helpers.csproj" />
   </ItemGroup>
 
   <ItemGroup>
