Unit tests for Churchee.Module.X

--- a/src/Churchee.Module.X/Churchee.Module.X.csproj
+++ b/src/Churchee.Module.X/Churchee.Module.X.csproj
@@ -16,6 +16,8 @@
     <ProjectReference Include="..\Churchee.Module.Tokens\Churchee.Module.Tokens.csproj" />
   </ItemGroup>
 
-
+  <ItemGroup>
+    <InternalsVisibleTo Include="$(MSBuildProjectName).Tests" />
+  </ItemGroup>
 
 </Project>
