--- a/test/Churchee.Module.Hangfire.Tests/Churchee.Module.Hangfire.Tests.csproj
+++ b/test/Churchee.Module.Hangfire.Tests/Churchee.Module.Hangfire.Tests.csproj
@@ -15,6 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="FluentAssertions" Version="6.12.1" />
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="8.0.18" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.10" />	  
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="Moq" Version="4.20.72" />
