--- a/src/Churchee.Module.Site/Churchee.Module.Site.csproj
+++ b/src/Churchee.Module.Site/Churchee.Module.Site.csproj
@@ -55,6 +55,10 @@
     <ProjectReference Include="..\Churchee.Module.UI\Churchee.Module.UI.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\HtmlEditor\Commands\" />
+  </ItemGroup>
+
 
 
 </Project>
