--- a/src/Churchee.Infrastructure.SassCompilation/Churchee.Infrastructure.SassCompilation.csproj
+++ b/src/Churchee.Infrastructure.SassCompilation/Churchee.Infrastructure.SassCompilation.csproj
@@ -45,33 +45,7 @@
 	<ItemGroup>
 	  <Folder Include="wwwroot\" />
 	</ItemGroup>
-
-	<!-- Inline RenameDir task -->
-	<UsingTask TaskName="RenameDir" TaskFactory="CodeTaskFactory" AssemblyName="Microsoft.Build.Tasks.Core">
-		<ParameterGroup>
-			<Source ParameterType="System.String" />
-			<Destination ParameterType="System.String" />
-		</ParameterGroup>
-		<Task>
-			<Using Namespace="System.IO" />
-			<Code Type="Fragment" Language="cs">
-				<![CDATA[
-        if (string.IsNullOrWhiteSpace(Source) || string.IsNullOrWhiteSpace(Destination))
-            throw new ArgumentException("Source and Destination must be set for RenameDir.");
-
-        if (Directory.Exists(Source))
-        {
-            if (Directory.Exists(Destination))
-                Directory.Delete(Destination, true);
-            Directory.Move(Source, Destination);
-        }
-        return true;
-      ]]>
-			</Code>
-		</Task>
-	</UsingTask>
-
-
+	
 	<Target Name="DownloadAndExtractBootstrap" BeforeTargets="BeforeBuild" Condition="'@(ExistingBootstrapScss-&gt;Count())' == '0'">
 
 		<!-- Make sure temp and target dirs exist -->
@@ -82,24 +56,21 @@
 		<Exec Command="curl -L -o &quot;$(BootstrapZip)&quot; https://github.com/twbs/bootstrap/archive/v$(BootstrapVersion).zip" />
 
 		<!-- Windows extraction -->
-		<Exec Condition="'$(OS)' == 'Windows_NT'" Command="powershell -NoProfile -ExecutionPolicy Bypass -Command &quot;Expand-Archive -Path \&quot;$(BootstrapZip)\&quot; -DestinationPath \&quot;$(BootstrapTempDir)\&quot; -Force&quot;" />
+		<Exec Condition="'$(OS)' == 'Windows_NT'"
+			  Command="powershell -NoProfile -ExecutionPolicy Bypass -Command &quot;Expand-Archive -Path \&quot;$(BootstrapZip)\&quot; -DestinationPath \&quot;$(BootstrapTempDir)\&quot; -Force&quot;" />
+
+		<Exec Condition="'$(OS)' == 'Windows_NT'"
+			  Command="cmd /c &quot;if exist &quot;$(BootstrapTempDir)\bootstrap-$(BootstrapVersion)&quot; ( rmdir /S /Q &quot;wwwroot\lib\bootstrap\scss&quot; &amp;&amp; move &quot;$(BootstrapTempDir)\bootstrap-$(BootstrapVersion)\scss&quot; &quot;wwwroot\lib\bootstrap\scss&quot; )&quot;" />
 
 		<!-- Linux/macOS extraction -->
-		<Exec Condition="'$(OS)' != 'Windows_NT'" Command="unzip -o $(BootstrapZip) -d $(BootstrapTempDir)" />
+		<Exec Condition="'$(OS)' != 'Windows_NT'"
+			  Command="unzip -o $(BootstrapZip) -d $(BootstrapTempDir)" />
 
-		<!-- Rename bootstrap-x.y.z folder to just 'bootstrap' -->
-		<RenameDir Source="$(BootstrapTempDir)/bootstrap-$(BootstrapVersion)" Destination="$(BootstrapTempDir)/bootstrap" />
-
-		<!-- Include only files under the scss/ folder of the extracted tree.
-         Pattern 'bootstrap-*/scss/**/*.*' ensures RecursiveDir is relative to scss/. -->
-		<ItemGroup>
-			<BootstrapScssFiles Include="$(BootstrapTempDir)/bootstrap/scss/**/*.*" />
-		</ItemGroup>
-
-		<!-- Copy to your wwwroot/lib/bootstrap/scss while preserving subfolders under scss/ -->
-		<Copy SourceFiles="@(BootstrapScssFiles)" DestinationFolder="$(BootstrapTargetDir)/%(BootstrapScssFiles.RecursiveDir)" />
+		<Exec Condition="'$(OS)' != 'Windows_NT'"
+			  Command="bash -c 'if [ -d &quot;$(BootstrapTempDir)/bootstrap-$(BootstrapVersion)&quot; ]; then rm -rf wwwroot/lib/bootstrap/scss; mv $(BootstrapTempDir)/bootstrap-$(BootstrapVersion)/scss wwwroot/lib/bootstrap/scss; fi'" />
 
 		<!-- Cleanup temp files -->
+		
 		<RemoveDir Directories="$(BootstrapTempDir)" />
 		<Delete Files="$(BootstrapZip)" />
 
