Prevent Logging of Spammy Page instead of filtering them out

--- a/test/Churchee.Module.Dashboard.Tests/Churchee.Module.Dashboard.Tests.csproj
+++ b/test/Churchee.Module.Dashboard.Tests/Churchee.Module.Dashboard.Tests.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Churchee.Data.EntityFramework.Admin\Churchee.Data.EntityFramework.Admin.csproj" />
+    <ProjectReference Include="..\..\src\Churchee.Data.EntityFramework.Shared\Churchee.Data.EntityFramework.Shared.csproj" />
     <ProjectReference Include="..\..\src\Churchee.Module.Dashboard\Churchee.Module.Dashboard.csproj" />
   </ItemGroup>
 
