More Removals of Fluent Validation

--- a/test/Churchee.Infrastructure.SassCompilation.Tests/Churchee.Infrastructure.SassCompilation.Tests.csproj
+++ b/test/Churchee.Infrastructure.SassCompilation.Tests/Churchee.Infrastructure.SassCompilation.Tests.csproj
@@ -18,6 +18,7 @@
   
   <ItemGroup>
     <ProjectReference Include="..\..\src\Churchee.Infrastructure.SassCompilation\Churchee.Infrastructure.SassCompilation.csproj" />
+    <ProjectReference Include="..\Churchee.Test.Helpers\Churchee.Test.Helpers.csproj" />
   </ItemGroup>
 
   <ItemGroup>
