--- a/test/Churchee.Data.EntityFramework.Site.Tests/Churchee.Data.EntityFramework.Site.Tests.csproj
+++ b/test/Churchee.Data.EntityFramework.Site.Tests/Churchee.Data.EntityFramework.Site.Tests.csproj
@@ -16,7 +16,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="FluentAssertions" Version="6.12.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.11" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="Moq" Version="4.20.72" />
@@ -30,6 +29,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Churchee.Data.EntityFramework.Site\Churchee.Data.EntityFramework.Site.csproj" />
+    <ProjectReference Include="..\Churchee.Test.Helpers\Churchee.Test.Helpers.csproj" />
   </ItemGroup>
 
   <ItemGroup>
