--- a/test/Churchee.Module.Podcasts.Spotify.Tests/Churchee.Module.Podcasts.Spotify.Tests.csproj
+++ b/test/Churchee.Module.Podcasts.Spotify.Tests/Churchee.Module.Podcasts.Spotify.Tests.csproj
@@ -16,7 +16,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="FluentAssertions" Version="6.12.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.9.3" />
@@ -28,6 +27,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Churchee.Module.Podcasts.Spotify\Churchee.Module.Podcasts.Spotify.csproj" />
+    <ProjectReference Include="..\Churchee.Test.Helpers\Churchee.Test.Helpers.csproj" />
   </ItemGroup>
 
   <ItemGroup>
