--- a/test/Churchee.Test.Helpers/Churchee.Test.Helpers.csproj
+++ b/test/Churchee.Test.Helpers/Churchee.Test.Helpers.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
 	  <PackageReference Include="xunit" Version="2.9.3" />
 	  <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+	  <PackageReference Include="xunit.abstractions" Version="2.0.3" />
   </ItemGroup>
 	
 </Project>
