--- a/test/Churchee.Infrastructure.SassCompilation.Tests/Churchee.Infrastructure.SassCompilation.Tests.csproj
+++ b/test/Churchee.Infrastructure.SassCompilation.Tests/Churchee.Infrastructure.SassCompilation.Tests.csproj
@@ -12,7 +12,10 @@
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="3.1.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="3.1.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
   
   <ItemGroup>
