--- a/test/Churchee.Module.Logging.Tests/Churchee.Module.Logging.Tests.csproj
+++ b/test/Churchee.Module.Logging.Tests/Churchee.Module.Logging.Tests.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Churchee.Module.Logging\Churchee.Module.Logging.csproj" />
+    <ProjectReference Include="..\Churchee.Test.Helpers\Churchee.Test.Helpers.csproj" />
   </ItemGroup>
 
   <ItemGroup>
