--- a/test/Churchee.Module.Videos.Tests/Churchee.Module.Videos.Tests.csproj
+++ b/test/Churchee.Module.Videos.Tests/Churchee.Module.Videos.Tests.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.Specification" Version="8.0.0" />
     <PackageReference Include="coverlet.collector" Version="6.0.4" />
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="Testcontainers.MsSql" Version="4.4.0" />
