--- a/test/Churchee.Test.Helpers/Churchee.Test.Helpers.csproj
+++ b/test/Churchee.Test.Helpers/Churchee.Test.Helpers.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="10.15.0.120848">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="xunit.assert" Version="2.9.3" />
   </ItemGroup>
 
