Video Module Tests

--- a/test/Churchee.Module.Videos.Tests/Churchee.Module.Videos.Tests.csproj
+++ b/test/Churchee.Module.Videos.Tests/Churchee.Module.Videos.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Churchee.Module.Videos\Churchee.Module.Videos.csproj" />
+    <ProjectReference Include="..\Churchee.Test.Helpers\Churchee.Test.Helpers.csproj" />
   </ItemGroup>
 
   <ItemGroup>
