--- a/test/Churchee.Module.Videos.Tests/Churchee.Module.Videos.Tests.csproj
+++ b/test/Churchee.Module.Videos.Tests/Churchee.Module.Videos.Tests.csproj
@@ -10,24 +10,20 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="coverlet.collector" Version="6.0.4">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
+		<PackageReference Include="coverlet.collector" Version="6.0.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
 		<PackageReference Include="Moq" Version="4.20.72" />
-		<PackageReference Include="xunit" Version="2.9.3" />
-		<PackageReference Include="xunit.runner.visualstudio" Version="3.1.0">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
+		<PackageReference Include="xunit" Version="2.5.3" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\src\Churchee.Module.Videos\Churchee.Module.Videos.csproj" />
 		<ProjectReference Include="..\Churchee.Test.Helpers\Churchee.Test.Helpers.csproj" />
 	</ItemGroup>
-	
+
 	<ItemGroup>
 		<Using Include="Xunit" />
 	</ItemGroup>
+
 </Project>
