--- a/test/Churchee.Module.Events.Tests/Churchee.Module.Events.Tests.csproj
+++ b/test/Churchee.Module.Events.Tests/Churchee.Module.Events.Tests.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Churchee.Module.Events\Churchee.Module.Events.csproj" />
+    <ProjectReference Include="..\Churchee.Test.Helpers.Blazor\Churchee.Test.Helpers.Blazor.csproj" />
     <ProjectReference Include="..\Churchee.Test.Helpers\Churchee.Test.Helpers.csproj" />
   </ItemGroup>
 
