Refactor image upload handling and integrate AI tools
- Updated `.editorconfig` for naming conventions.
- Removed `ChunkedUploadType.cs` and replaced with `ChunkedImageUploadType`.
- Added using directives for authentication in `ApplicationDbContext.cs` and `SiteDbContext.cs`.
- Simplified `CreateCropsAsync` method signature in `ImageCropsGenerator.cs`.
- Changed CDN path retrieval in `Index.razor` to use `TenantResolver.GetCDNPrefix()`.
- Introduced `BlogDetailComponentModel` and `BlogListingComponentModel` for better data encapsulation.
- Updated `ITenantResolver` to include CDN prefix method.
- Created new project `Churchee.Infrastructure.AiTools` for AI functionalities.
- Enhanced `ChunkedImageUpload` component with AI-generated alt text.
- Updated tests and service registrations to reflect new abstractions and functionalities.

--- a/.editorconfig
+++ b/.editorconfig
@@ -204,6 +204,10 @@ dotnet_naming_rule.non_field_members_should_be_pascal_case.severity = error
 dotnet_naming_rule.non_field_members_should_be_pascal_case.symbols = non_field_members
 dotnet_naming_rule.non_field_members_should_be_pascal_case.style = pascal_case
 
+dotnet_naming_rule.private_fields_with_underscore.symbols = private_fields
+dotnet_naming_rule.private_fields_with_underscore.style = underscore_prefix
+dotnet_naming_rule.private_fields_with_underscore.severity = suggestion
+
 # Symbol specifications
 
 dotnet_naming_symbols.interface.applicable_kinds = interface
