--- a/test/Churchee.Module.Podcasts.Tests/Churchee.Module.Podcasts.Tests.csproj
+++ b/test/Churchee.Module.Podcasts.Tests/Churchee.Module.Podcasts.Tests.csproj
@@ -28,11 +28,16 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Churchee.Module.Podcasts\Churchee.Module.Podcasts.csproj" />
+    <ProjectReference Include="..\Churchee.Test.Helpers.Blazor\Churchee.Test.Helpers.Blazor.csproj" />
     <ProjectReference Include="..\Churchee.Test.Helpers\Churchee.Test.Helpers.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Using Include="Xunit" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Shared\Pages\" />
   </ItemGroup>
 
 </Project>
