Upgrade to .NET 10 and add new Identity dependencies
Updated target framework to net10.0 in Churchee.Common and Churchee.Module.UI projects. Enhanced Churchee.Module.Identity by adding package references for Microsoft.EntityFrameworkCore.SqlServer, Azure.Identity, Microsoft.Data.SqlClient, and System.IdentityModel.Tokens.Jwt, supporting improved database and authentication capabilities.

--- a/src/Churchee.Module.Identity/Churchee.Module.Identity.csproj
+++ b/src/Churchee.Module.Identity/Churchee.Module.Identity.csproj
@@ -12,6 +12,10 @@
   <ItemGroup>
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="10.0.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.0" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0" />
+	  <PackageReference Include="Azure.Identity" Version="1.17.0" />
+	  <PackageReference Include="Microsoft.Data.SqlClient" Version="7.0.0-preview2.25289.6" />
+	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
   </ItemGroup>
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
