* 'Line 3: Removed the using directive for 'Churchee.Module.Identity.Entities' because the namespace does not exist in the project dependencies. No replacement could be determined from available context.' in file 'src\Churchee.Module.Site\Seed\DefaultRolesSeed.cs'

--- a/src/Churchee.Common/Churchee.Common.csproj
+++ b/src/Churchee.Common/Churchee.Common.csproj
@@ -11,8 +11,8 @@
     <PackageReference Include="Ardalis.Specification" Version="9.3.1" />
     <PackageReference Include="BlazorMonaco" Version="3.4.0" />
     <PackageReference Include="Bogus" Version="35.6.5" />
-	  
-    <PackageReference Include="Hangfire.Core" Version="1.8.22" />
+    <PackageReference Include="FluentValidation" Version="11.10.0" />
+	<PackageReference Include="Hangfire.Core" Version="1.8.22" />
     <PackageReference Include="MediatR" Version="13.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.DataAnnotations.Validation" Version="3.2.0-rc1.20223.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0" />
