Add Identity module reference to Tenancy and Site
Added a project reference to Churchee.Module.Identity in Churchee.Module.Tenancy.csproj. Also, reordered and restored the Identity module reference in Churchee.Module.Site.csproj to ensure proper dependency inclusion. These changes help maintain consistent module dependencies across the solution.

--- a/src/Churchee.Module.Tenancy/Churchee.Module.Tenancy.csproj
+++ b/src/Churchee.Module.Tenancy/Churchee.Module.Tenancy.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Churchee.Common\Churchee.Common.csproj" />
     <ProjectReference Include="..\Churchee.Module.UI\Churchee.Module.UI.csproj" />
+    <ProjectReference Include="..\Churchee.Module.Identity\Churchee.Module.Identity.csproj" />
   </ItemGroup>
 
   <ItemGroup>
