--- a/src/Churchee.Module.Identity/Churchee.Module.Identity.csproj
+++ b/src/Churchee.Module.Identity/Churchee.Module.Identity.csproj
@@ -14,7 +14,7 @@
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0" />
 	  <PackageReference Include="Azure.Identity" Version="1.17.0" />
-	  <PackageReference Include="Microsoft.Data.SqlClient" Version="7.0.0-preview2.25289.6" />
+	  <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.2" />
 	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
   </ItemGroup>
   <ItemGroup>
