--- a/src/Churchee.Module.Site/Churchee.Module.Site.csproj
+++ b/src/Churchee.Module.Site/Churchee.Module.Site.csproj
@@ -59,7 +59,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.0" />
     <PackageReference Include="Azure.Identity" Version="1.17.0" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="7.0.0-preview2.25289.6" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
     <PackageReference Include="FluentValidation" Version="12.1.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
